--- a/package.json
+++ b/package.json
@@ -8,19 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.20",
+    "apollo-client": "^2.6.10",
+    "apollo-link-ws": "^1.0.20",
     "firebase": "^8.6.1",
     "firebase-admin": "^9.8.0",
+    "graphql": "^15.5.0",
+    "isomorphic-ws": "^4.0.1",
     "next": "10.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "subscriptions-transport-ws": "^0.9.19",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.6",
     "@types/uuid": "^8.3.0",
+    "@types/ws": "^7.4.4",
     "autoprefixer": "^10.2.5",
     "postcss": "^8.2.15",
     "tailwindcss": "^2.1.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "ws": "^7.5.0"
   }
 }
